Fix missing background with scrollbars

--- a/public/stylus/_full-error.styl
+++ b/public/stylus/_full-error.styl
@@ -67,6 +67,10 @@
 @media $small-min-width {
     .full-error {
 
+        &.page {
+            overflow: auto;
+        }
+
         h1 {
             font-size: 30px;
             margin: 0;
