--- a/public/stylus/_throbber.styl
+++ b/public/stylus/_throbber.styl
@@ -24,4 +24,8 @@
     }
 }
 
-
+@media $small-min-width {
+    .throbber.page {
+        overflow: auto;
+    }
+}
